--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <title>Bootstrap homework</title>
+    <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
+    <title>Contacts</title>
    <style>
      *{
   margin: 0;
   padding: 0;
   font-family: "montserrat",sans-serif;
 }
-
-
 
 
 .social-buttons a{
@@ -58,6 +57,11 @@
   -webkit-text-fill-color: transparent;
   transform: scale(2.2);
 }
+
+@media screen and (max-width: 1280px) { .mainContent {width: 1200px;} }
+@media screen and (max-width: 1140px) { .mainContent {width: 1024px;} }
+@media screen and (max-width: 992px) { .mainContent {width: 970px;} }
+
    </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -99,7 +103,7 @@
 </nav>
 
 
-<main role="main" class="container" style="padding: 2.3rem 1.5rem; text-align: center;">
+<main role="main" class="container mainContent" style="padding: 2.3rem 1.5rem; text-align: center; margin-bottom: 25 px;">
 
   <div class="starter-template">
     <h2>Контактная информация</h2>
