--- a/tasks.html
+++ b/tasks.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Bootstrap homework</title>
+    <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
+    <title>Tasks</title>
    <style>
      .col-xs-1-5,
 .col-sm-1-5,
@@ -19,7 +19,7 @@
   padding-right: 10px;
   padding-left: 10px;
   margin-top: 25px;
-
+  margin-bottom: 25px;
 }
  
 .col-xs-1-5 {
@@ -90,7 +90,7 @@
 <!--основная информация страницы-->
 <div class="row">
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card" style="margin-left: 20px;">
+      <div class="card" style="margin-left: 30px;">
         <div class="card-body">
           <h4 class="card-title">Задание 1</h4>
           <h6 class="card-subtitle mb-2 text-muted">Блочная верстка</h6>
@@ -100,7 +100,7 @@
       </div>
     </div>
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card" >
+      <div class="card">
         <div class="card-body">
           <h4 class="card-title">Задание 2</h4>
           <h6 class="card-subtitle mb-2 text-muted">Изучение CSS</h6>
