--- a/map.html
+++ b/map.html
@@ -7,10 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"></script>
-    <title>Bootstrap homework</title>
+    <title>Map</title>
     <style>
         .map-container-2{
         overflow:hidden;
@@ -27,6 +28,9 @@
         position:absolute;
         margin: 10 px;
         }
+        @media screen and (max-width: 1280px) { div.container {width: 1200px;} }
+        @media screen and (max-width: 1140px) { div.container {width: 1024px;} }
+        @media screen and (max-width: 992px) { div.container {width: 970px;} }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -66,6 +70,8 @@
           </ul>
         </div>
 </nav>
+
+<!--Основной контент-->
 <div class="container">
     <div class="row">
       <div class="col-sm">
