--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Bootstrap homework</title>
+    <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
+    
+    <title>Starun Igor</title>
   </head>
   <body>
    
@@ -47,36 +48,6 @@
           </ul>
         </div>
 </nav>
-<!--
-<script>
-    //начало работы
-
-let creationButton = document.createElement('button');
-let rowsNumber = document.createElement('input');
-let colsNumber = document.createElement('input');
-let newForm = document.createElement('form');
-
-//Создайте форму, в которой пользователь задает размеры таблицы (количество строк и столбцов
-
-colsNumber.placeholder = 'Введите кол-во столбцов';
-colsNumber.type = 'text';
-colsNumber.id = 'columns';
-colsNumber.style.display = 'block';
-
-rowsNumber.placeholder = 'Введите кол-во строк';
-rowsNumber.type = 'text';
-rowsNumber.id = 'rows';
-rowsNumber.style.display = 'block';
-
-creationButton.type = 'button';
-creationButton.innerText = 'Создать таблицу';
-
-newForm.append(colsNumber, rowsNumber, creationButton);
-document.body.appendChild(newForm);
-
-    </script>-->
-  
-    
 
     <main role="main" class="container" style="padding: 2.3rem 1.5rem; text-align: center;">
 
