--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   align-items: center;
   position: relative;
   margin: 0 8px;
-  margin-bottom: 25 px;
+  margin-bottom: 10 px;
 }
 
 .social-buttons a::before{
@@ -61,7 +61,7 @@
 
 @media screen and (max-width: 1280px) { .mainContent {width: 1200px;} }
 @media screen and (max-width: 1140px) { .mainContent {width: 1024px;} }
-@media screen and (max-width: 992px) { .mainContent {width: 970px;} }
+@media screen and (max-width: 992px) { .mainContent {max-width: 970px;} }
 
    </style>
   </head>
