--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 </nav>
 
 
-<main role="main" class="container mainContent" style="padding: 2.3rem 1.5rem; text-align: center; margin-bottom: 100 px;">
+<main role="main" class="container mainContent flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center; margin-bottom: 15%;">
 
   <div class="starter-template">
     <h2>Контактная информация</h2>
@@ -121,7 +121,7 @@
         <a href="https://www.vk.com"><i class="fab fa-linkedin-in"></i></a>
     </div>
   </div>
-
+  </div>
 </main>
 
 
