--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 </nav>
 
 
-<main role="main" class="container mainContent flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center; margin-bottom: 15%;">
+<main role="main" class="container mainContent flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center; height: 100%;">
 
   <div class="starter-template">
     <h2>Контактная информация</h2>
