--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,6 @@
 
 .social-buttons a:hover i{
   background: linear-gradient(45deg,#22a6b3,#30336b);
-  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transform: scale(2.2);
 }
@@ -101,8 +100,8 @@
 </nav>
 
 
-<main role="main" class="container mainContent flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center; height: 100%;">
-
+<main role="main" class="container mainContent flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center; height: 100%">
+  <div class="container mt-sm-5 mt-3" style="max-width: 800px; margin-left: auto; margin-right: auto; margin-bottom: auto;">
   <div class="starter-template">
     <h2>Контактная информация</h2>
 
@@ -120,6 +119,7 @@
         <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
         <a href="https://www.vk.com"><i class="fab fa-linkedin-in"></i></a>
     </div>
+  </div>
   </div>
   </div>
 </main>
