--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
     
     <title>Starun Igor</title>
+
+    <style>
+        html {
+        position: relative;
+        min-height: 100%;
+        }
+        body {
+        margin-bottom: 70px;
+        }
+        #footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 70px;
+        background-color: #f5f5f5;
+        }
+    </style>
   </head>
   <body>
    
@@ -72,12 +89,12 @@
 </main>
 
 <!-- Футер -->
-<div class="container">
-  
-    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light text-center justify-content-center" style="background-color: #bedaee;">
-        <p class="text-center" style="align-content: center">Старун Игорь, N3456<br>Университет ИТМО, 2020</p>
-     </nav>
+
+<footer class="mt-auto" id="footer">
+  <div class="container-fluid text-center d-flex navbar-light align-items-center justify-content-center h-100" style="background-color:  #bedaee; bottom:0;">
+      <p class="text-center" style="align-content: center">Старун Игорь, N3456<br>Университет ИТМО, 2020</p>
 </div>
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
