--- a/table.html
+++ b/table.html
@@ -107,8 +107,24 @@
         vertical-align: middle;
         color: #978777;
         }
+ 
+        html {
+        position: relative;
+        min-height: 100%;
+        }
+        body {
+        /* Margin bottom by footer height */
+        margin-bottom: 70px;
+        }
+        #footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        /* Set the fixed height of the footer here */
+        height: 70px;
+        background-color: #f5f5f5;
+        }
 
-    
 
     </style>
   </head>
@@ -220,12 +236,12 @@
 <script type="text/javascript" src="table.js"></script>
 
 <!-- Футер -->
-<div class="container">
-  
-    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light text-center justify-content-center" style="background-color:  #bedaee;">
+
+<footer class="mt-auto" id="footer">
+    <div class="container-fluid text-center d-flex navbar-light align-items-center justify-content-center h-100" style="background-color:  #bedaee; bottom:0;">
         <p class="text-center" style="align-content: center">Старун Игорь, N3456<br>Университет ИТМО, 2020</p>
-     </nav>
 </div>
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
