--- a/map.html
+++ b/map.html
@@ -26,11 +26,22 @@
         height:80%;
         width:80%;
         position:absolute;
-        margin: 10 px;
+        margin: 10 px;}
+
+        html {
+        position: relative;
+        min-height: 100%;
         }
-        @media screen and (max-width: 1280px) { div.container {width: 1200px;} }
-        @media screen and (max-width: 1140px) { div.container {width: 1024px;} }
-        @media screen and (max-width: 992px) { div.container {width: 970px;} }
+        body {
+        margin-bottom: 70px;
+        }
+        #footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 70px;
+        background-color: #f5f5f5;
+        }
     </style>
   </head>
   <body class="d-flex flex-column h-100">
@@ -100,12 +111,12 @@
 
 
 <!-- Футер -->
-<div class="container">
-  
-    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light text-center justify-content-center" style="background-color:  #bedaee;">
-        <p class="text-center" style="align-content: center">Старун Игорь, N3456<br>Университет ИТМО, 2020</p>
-     </nav>
+
+<footer class="mt-auto" id="footer">
+  <div class="container-fluid text-center d-flex navbar-light align-items-center justify-content-center h-100" style="background-color:  #bedaee; bottom:0;">
+      <p class="text-center" style="align-content: center">Старун Игорь, N3456<br>Университет ИТМО, 2020</p>
 </div>
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
