--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
     <title>Contacts</title>
-   <style>
-     *{
+
+<style>
+*{
   margin: 0;
   padding: 0;
   font-family: "montserrat",sans-serif;
 }
-
 
 .social-buttons a{
   display: inline-flex;
@@ -61,11 +61,9 @@ html {
   position: relative;
   min-height: 100%;
 }
-body {
-  margin-bottom: 70px;
-}
+
 #footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 70px;
@@ -113,9 +111,9 @@ body {
         </div>
 </nav>
 
-
-<main role="main" class="container mainContent flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center; height: 100%">
-  <div class="container mt-sm-5 mt-3" style="max-width: 800px; margin-left: auto; margin-right: auto; margin-bottom: auto;">
+ <!-- Основная часть -->
+<main role="main" class="flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center;">
+  <div class="container mt-sm-5 mt-3" style="max-width: 800px; margin-left: auto; margin-right: auto;">
   <div class="starter-template">
     <h2>Контактная информация</h2>
 
