updated for mobile devices

--- a/map.html
+++ b/map.html
@@ -83,17 +83,18 @@
 </nav>
 
 <!--Основной контент-->
+<main role="main" class="flex-shrink-0 text-center" style="padding: 2.3rem 1.5rem; align-items: center">
 <div class="container">
     <div class="row">
       <div class="col-sm">
-        <div class="container-fluid" style="margin-top: 25px; margin-bottom: 100px">
+        <div class="container-fluid" style="margin:auto; ">
             <div class="map-responsive">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64086.7784369371!2d29.013235971494804!3d59.87053104213827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46968a4c7cbe4cdb%3A0x41de63ddb2b30bd7!2z0KHQvtGB0L3QvtCy0YvQuSDQkdC-0YAsINCb0LXQvdC40L3Qs9GA0LDQtNGB0LrQsNGPINC-0LHQuy4!5e0!3m2!1sru!2sru!4v1587223624813!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
         </div>
       </div>
       <div class="col-sm">
-        <div class="card" style="margin-top: 25px; margin-bottom: 100px">
+        <div class="card" style="margin: auto;">
             <div class="card-body"><!-- Начало текстового контента -->
               <h4 class="card-title">Город Сосновый Бор</h4>
               <h6 class="card-subtitle mb-2 text-muted">Ленинградская область, Россия</h6>
@@ -108,7 +109,7 @@
       </div>
     </div>
   </div>
-
+</main>
 
 <!-- Футер -->
 
