updated for mobile devices

--- a/tasks.html
+++ b/tasks.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="https://png.cmtt.space/paper-media/81/a3/bd/a8cf05ef37671c.png">
     <title>Tasks</title>
    <style>
-     .col-xs-1-5,
+.col-xs-1-5,
 .col-sm-1-5,
 .col-md-1-5,
 .col-lg-1-5 {
@@ -23,27 +23,27 @@
 }
  
 .col-xs-1-5 {
-  width: 20%;
+  width: 19%;
   float: left;
 }
  
 @media (min-width: 768px) {
   .col-sm-1-5 {
-    width: 20%;
+    width: 19%;
     float: left;
   }
 }
  
 @media (min-width: 992px) {
   .col-md-1-5 {
-    width: 20%;
+    width: 19%;
     float: left;
   }
 }
  
 @media (min-width: 1200px) {
   .col-lg-1-5 {
-    width: 20%;
+    width: 19%;
     float: left;
   }
 }
@@ -51,11 +51,9 @@ html {
   position: relative;
   min-height: 100%;
     }
-body {
-  margin-bottom: 70px;
-    }
+
 #footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 70px;
@@ -102,64 +100,65 @@ body {
 </nav>
 
 <!--основная информация страницы-->
+<main role="main" class="flex-shrink-0 text-center" style="padding: 1rem 1.5rem; align-items: center">
 <div class="row">
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card" style="margin-left: 30px;">
+      <div class="card" style="margin-left: 10px;">
         <div class="card-body">
           <h4 class="card-title">Задание 1</h4>
           <h6 class="card-subtitle mb-2 text-muted">Блочная верстка</h6>
-          <p class="card-text" style="font-size: 18px">В задании необходимо выполнить блочную верстку по заданному шаблону, включающему в себя шапку, футер, а также блоки контента и прочей информации с помощью html.</p>
+          <p class="card-text" style="font-size: 17px">В задании необходимо выполнить блочную верстку по заданному шаблону, включающему в себя шапку, футер, а также блоки контента и прочей информации с помощью html.</p>
           <a href="https://github.com/igoreshaa1/itmo/tree/master/%D0%91%D0%BB%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%B5%D1%80%D1%81%D1%82%D0%BA%D0%B0" class="card-link">Ссылка на задание 1</a>
         </div>
       </div>
     </div>
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card">
+      <div class="card" style="margin-left: 10px">
         <div class="card-body">
           <h4 class="card-title">Задание 2</h4>
           <h6 class="card-subtitle mb-2 text-muted">Изучение CSS</h6>
-          <p class="card-text" style="font-size: 18px">В задании необходимо выполнить CSS верстку сайта, опираясь на скриншот реальной html-страницы. Чем меньше отличий от оригинала, тем лучше.</p>
+          <p class="card-text" style="font-size: 17px">В задании необходимо выполнить CSS верстку сайта, опираясь на скриншот реальной html-страницы. Чем меньше отличий от оригинала, тем лучше.</p>
           <a href="https://github.com/igoreshaa1/itmo/tree/master/CSS" class="card-link">Ссылка на задание 2</a>
         </div>
       </div>
     </div>
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card" >
+      <div class="card" style="margin-left: 10px">
         <div class="card-body" >
           <h4 class="card-title">Задание 3</h4>
           <h6 class="card-subtitle mb-2 text-muted">Знакомство с JS</h6>
-          <p class="card-text" style="font-size: 18px">В задании необходимо продемонстрировать навыки работы с document.write, ссылками, строками, основными тегами в документе, с различными элементами формы, а также с изображениями. Работа состоит из трех частей.</p>
+          <p class="card-text" style="font-size: 17px">В задании необходимо продемонстрировать навыки работы с document.write, ссылками, строками, основными тегами в документе, с различными элементами формы, а также с изображениями. Работа состоит из трех частей.</p>
           <a href="https://github.com/igoreshaa1/itmo/tree/master/JS%20homework%201" class="card-link">Ссылка на задание 3</a>
         </div>
     </div>
     </div>
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card" >
+      <div class="card" style="margin-left: 10px">
         <div class="card-body" >
           <h4 class="card-title">Задание 4</h4>
           <h6 class="card-subtitle mb-2 text-muted">Создание таблицы</h6>
-          <p class="card-text" style="font-size: 18px">В задании необходимо создать таблицу по количеству строк и столбцов. Затем нужно создать блок с функциями (удаление строки, добавление заголовка и т.д.).</p>
+          <p class="card-text" style="font-size: 17px">В задании необходимо создать таблицу по количеству строк и столбцов. Затем нужно создать блок с функциями (удаление строки, добавление заголовка и т.д.).</p>
           <a href="https://github.com/igoreshaa1/itmo/tree/master/JS%20homework%202" class="card-link">Ссылка на задание 4</a>
         </div>
     </div>
     </div>
     <div class="col-xs-6 col-sm-1-5  col-md-1-5  col-lg-1-5">
-      <div class="card" >
+      <div class="card" style="margin-left: 10px">
         <div class="card-body" >
           <h4 class="card-title">Задание 5</h4>
           <h6 class="card-subtitle mb-2 text-muted">Знакомство с JQuery</h6>
-          <p class="card-text" style="font-size: 18px">В задании необходимо продемонстрировать навыки работы c JQuery, в том числе выполнить упражнения с текстом и ссылками, познакомиться с технологией Ajax, изучить работу анимаций и эффектов.</p>
+          <p class="card-text" style="font-size: 17px">В задании необходимо продемонстрировать навыки работы c JQuery, в том числе выполнить упражнения с текстом и ссылками, познакомиться с технологией Ajax, изучить работу анимаций и эффектов.</p>
           <a href="https://github.com/igoreshaa1/itmo/tree/master/JQuery" class="card-link">Ссылка на задание 5</a>
         </div>
     </div>
     </div>
 </div>
-
+</main>
 
 <!-- Футер -->
 
 <footer class="mt-auto" id="footer">
-  <div class="container-fluid text-center d-flex navbar-light align-items-center justify-content-center h-100" style="background-color:  #bedaee; bottom:0;">
+  <div class="container-fluid text-center d-flex navbar-light align-items-center justify-content-center h-100" style="background-color:  #bedaee; ">
       <p class="text-center" style="align-content: center">Старун Игорь, N3456<br>Университет ИТМО, 2020</p>
 </div>
 </footer>
