--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@ html {
 
    </style>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body>
     
     <!-- Шапка сайта -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #bedaee;">
