--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,10 @@ html {
   min-height: 100%;
 }
 
+.mainContent {
+        margin-bottom: 70px;
+        }
+
 #footer {
   position: absolute;
   bottom: 0;
@@ -110,7 +114,7 @@ html {
 </nav>
 
  <!-- Основная часть -->
-<main role="main" class="flex-shrink-0" style="padding: 2.3rem 1.5rem; text-align: center;">
+<main role="main" class="flex-shrink-0 mainContent" style="padding: 2.3rem 1.5rem; text-align: center;">
   <div class="container mt-sm-5 mt-3" style="max-width: 800px; margin-left: auto; margin-right: auto;">
   <div class="starter-template">
     <h2>Контактная информация</h2>
